--- a/v2/back/package.json
+++ b/v2/back/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Nathan Dezan",
   "license": "ISC",
+  "engines": {
+    "node": "16.13.2"
+  },
   "dependencies": {
     "express": "^4.17.3",
     "mongodb": "^4.4.0"
